--- a/builds/vs2010/QSanguosha.vcxproj.filters
+++ b/builds/vs2010/QSanguosha.vcxproj.filters
@@ -45,10 +45,6 @@
     <Filter Include="util">
       <UniqueIdentifier>{41ea1f8d-ad6c-48cd-b070-6232f5788c09}</UniqueIdentifier>
     </Filter>
-    <Filter Include="server">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="ui\form">
       <UniqueIdentifier>{99349809-55BA-4b9d-BF79-8FDBB0286EB3}</UniqueIdentifier>
       <Extensions>ui</Extensions>
@@ -66,6 +62,10 @@
     </Filter>
     <Filter Include="Swig Files">
       <UniqueIdentifier>{9981aa0b-e6a2-412b-95d7-2e22d217b648}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ui\server">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -217,31 +217,31 @@
       <Filter>dialog</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\ai.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\serverplayer.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\contestdb.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\gamerule.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\generalselector.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\main.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\room.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\roomthread.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\server\server.cpp">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\core\protocol.cpp">
       <Filter>core</Filter>
@@ -762,31 +762,52 @@
     <ClCompile Include="Release\moc_standard-package.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\package\animation.cpp">
+      <Filter>package</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\package\game.cpp">
+      <Filter>package</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\package\comic.cpp">
+      <Filter>package</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\package\novel.cpp">
+      <Filter>package</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\package\moesen-package.cpp">
+      <Filter>package</Filter>
+    </ClCompile>
+    <ClCompile Include="Debug\moc_moesen-package.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="Release\moc_moesen-package.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\src\server\ai.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\contestdb.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\gamerule.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\generalselector.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\room.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\roomthread.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\server.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\server\serverplayer.h">
-      <Filter>server</Filter>
+      <Filter>ui\server</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\client\aux-skills.h">
       <Filter>client</Filter>
@@ -986,6 +1007,9 @@
     <CustomBuild Include="..\..\src\package\standard-package.h">
       <Filter>package</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\..\src\package\moesen-package.h">
+      <Filter>package</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\swig\sanguosha.i">
@@ -1084,6 +1108,18 @@
     </ClInclude>
     <ClInclude Include="..\..\src\core\namespace.h">
       <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\animation.h">
+      <Filter>package</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\comic.h">
+      <Filter>package</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\game.h">
+      <Filter>package</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\novel.h">
+      <Filter>package</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
