--- a/builds/vs2010/QSanguosha.vcxproj.filters
+++ b/builds/vs2010/QSanguosha.vcxproj.filters
@@ -766,6 +766,12 @@
     <ClCompile Include="..\..\src\package\animation.cpp">
       <Filter>package</Filter>
     </ClCompile>
+    <ClCompile Include="Debug\moc_novel.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="Release\moc_novel.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\src\server\ai.h">
@@ -990,6 +996,9 @@
     <CustomBuild Include="..\..\src\package\moesen-package.h">
       <Filter>package</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\..\src\package\novel.h">
+      <Filter>package</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\swig\sanguosha.i">
@@ -1093,9 +1102,6 @@
       <Filter>package</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\package\game.h">
-      <Filter>package</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\package\novel.h">
       <Filter>package</Filter>
     </ClInclude>
   </ItemGroup>
