--- a/builds/vs2013/QSanguosha.vcxproj.filters
+++ b/builds/vs2013/QSanguosha.vcxproj.filters
@@ -923,43 +923,19 @@
     <ClCompile Include="Release\moc_serverdialog.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\package\game.cpp">
+    <ClCompile Include="..\..\src\package\comic.cpp">
       <Filter>package</Filter>
     </ClCompile>
-    <ClCompile Include="Debug\moc_game.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Release\moc_game.cpp">
-      <Filter>Generated Files\Release</Filter>
+    <ClCompile Include="..\..\src\package\game.cpp">
+      <Filter>package</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\package\moesen-package.cpp">
       <Filter>package</Filter>
     </ClCompile>
-    <ClCompile Include="Debug\moc_moesen-package.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Release\moc_moesen-package.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\package\novel.cpp">
       <Filter>package</Filter>
     </ClCompile>
-    <ClCompile Include="Debug\moc_novel.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Release\moc_novel.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\package\animation.cpp">
-      <Filter>package</Filter>
-    </ClCompile>
-    <ClCompile Include="Debug\moc_animation.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Release\moc_animation.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\package\comic.cpp">
       <Filter>package</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1252,18 +1228,6 @@
     <CustomBuild Include="..\..\src\dialog\serverdialog.h">
       <Filter>dialog</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\..\src\package\game.h">
-      <Filter>package</Filter>
-    </CustomBuild>
-    <CustomBuild Include="..\..\src\package\moesen-package.h">
-      <Filter>package</Filter>
-    </CustomBuild>
-    <CustomBuild Include="..\..\src\package\novel.h">
-      <Filter>package</Filter>
-    </CustomBuild>
-    <CustomBuild Include="..\..\src\package\animation.h">
-      <Filter>package</Filter>
-    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\resource\icon.rc" />
@@ -1329,7 +1293,19 @@
     <ClInclude Include="..\..\src\core\json.h">
       <Filter>core</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\package\animation.h">
+      <Filter>package</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\src\package\comic.h">
+      <Filter>package</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\game.h">
+      <Filter>package</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\moesen-package.h">
+      <Filter>package</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\package\novel.h">
       <Filter>package</Filter>
     </ClInclude>
   </ItemGroup>
