tmd改了弃牌结算卧槽，窝debug了一万年才知道。

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ QtQuick.2/
 src/bot_version.cpp
 builds/vs2015/QSanguosha.VC.VC.opendb
 builds/vs2015/QSanguosha.VC.db
+QSanguosha.exp
+QSanguosha.ilk
+QSanguosha.lib
+QSanguosha.pdb
+lib/breakpad.pdb
+lib/lua.pdb
