--- a/builds/vs2015/breakpad.vcxproj
+++ b/builds/vs2015/breakpad.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{3023A030-312F-4878-B6F2-47D149585081}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>breakpad</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -68,15 +69,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)..\..\lib\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\breakpad\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)..\..\lib\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\breakpad\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)..\..\lib\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\breakpad\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)..\..\lib\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\breakpad\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
